--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,16 +9,15 @@ form.login {
 }
 
 #title-site {
-  padding-left: 10%;
+  padding-left: 13%;
 }
 
 .card {
-  background-color: rgb(36, 36, 36);;
+  background-color: white;
   border: 5px solid #7289da;
   border-radius: 25px;
   box-shadow: 0 10px 20px rgba(0,0,0,2),0 6px 6px rgba(0,0,0,0.23);
   margin-top: 10px;
-  color: rgb(172, 172, 172);
 }
 
 .login-card,
@@ -29,7 +28,7 @@ form.login {
   border-radius: 25px;
   margin-top: 50px;
   width: 40%;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19),0 6px 6px rgba(0,0,0,0.23)
+  box-shadow: 0 10px 20px rgba(0,0,0,2),0 6px 6px rgba(0,0,0,0.23)
 }
 
 .signup,
@@ -63,8 +62,18 @@ form.login {
 #Profile3.column,
 #Profile4.column {
   margin-top: 10px;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19),0 6px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 10px 20px rgba(0,0,0,2),0 6px 6px rgba(0,0,0,0.23);
   border-radius: 25px;
+  border: 2px solid black;
+  background-color: rgb(36, 36, 36);
+  color: white;
+}
+
+#thumb1,
+#thumb2,
+#thumb3,
+#thumb4 {
+  margin-top: 20px;
 }
 
 #recentFeed {
@@ -125,13 +134,13 @@ hr {
 
 #postForm {
   margin-top: 10px;
-  background-color: rgb(36, 36, 36);;
+  background-color: rgb(36, 36, 36);
   background-position: center;
   width: 50%;
   border: 5px solid #7289da;
   border-radius: 25px;
   margin-left: 25%;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19),0 6px 6px rgba(0,0,0,0.23)
+  box-shadow: 0 10px 20px rgba(0,0,0,2),0 6px 6px rgba(0,0,0,0.23)
 
 }
 
