--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -48,12 +48,8 @@
     <div id="top-streams">
       <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
         <ul class="orbit-container">
-          <button class="orbit-previous" aria-label="previous"><span class="show-for-sr">Previous
-              Slide</span>&#9664;</button>
-          <button class="orbit-next" aria-label="next"><span class="show-for-sr">Next
-              Slide</span>&#9654;</button>
           <li class="orbit-slide is-active">
-            <img src="https://placehold.it/2000x750" height="50%" width="1000px">
+            <img src="/imgs/img/game_banner.PNG" height="50%" width="1000px">
           </li>
         </ul>
       </div>
